--- a/pom.xml
+++ b/pom.xml
@@ -143,71 +143,105 @@
         </dependency>
 
     </dependencies>
-
     <build>
         <plugins>
+
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.3.0</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                        <configuration>
-                            <archive>
-                                <manifest>
-                                    <mainClass>Main</mainClass>
-                                </manifest>
-                            </archive>
-                            <descriptorRefs>
-                                <descriptorRef>jar-with-dependencies</descriptorRef>
-                            </descriptorRefs>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                </configuration>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
-        <!--        <plugins>-->
-        <!--            <plugin>-->
-        <!--                <groupId>org.springframework.boot</groupId>-->
-        <!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
-        <!--                <configuration>-->
-        <!--                    <excludes>-->
-        <!--                        <exclude>-->
-        <!--                            <groupId>org.projectlombok</groupId>-->
-        <!--                            <artifactId>lombok</artifactId>-->
-        <!--                        </exclude>-->
-        <!--                    </excludes>-->
-        <!--                </configuration>-->
-        <!--            </plugin>-->
-        <!--            <plugin>-->
-        <!--                <groupId>org.apache.maven.plugins</groupId>-->
-        <!--                <artifactId>maven-compiler-plugin</artifactId>-->
-        <!--                <configuration>-->
-        <!--                    <source>17</source>-->
-        <!--                    <target>17</target>-->
-        <!--                </configuration>-->
-        <!--            </plugin>-->
-        <!--        </plugins>-->
     </build>
+
+    <!--    <build>-->
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--                <configuration>-->
+<!--                    <excludes>-->
+<!--                        <exclude>-->
+<!--                            <groupId>org.projectlombok</groupId>-->
+<!--                            <artifactId>lombok</artifactId>-->
+<!--                        </exclude>-->
+<!--                    </excludes>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+<!--        </plugins>-->
+<!--    </build>-->
+
+    <!--    <build>-->
+    <!--        <plugins>-->
+    <!--            <plugin>-->
+    <!--                <groupId>org.apache.maven.plugins</groupId>-->
+    <!--                <artifactId>maven-assembly-plugin</artifactId>-->
+    <!--                <version>3.3.0</version>-->
+    <!--                <executions>-->
+    <!--                    <execution>-->
+    <!--                        <phase>package</phase>-->
+    <!--                        <goals>-->
+    <!--                            <goal>single</goal>-->
+    <!--                        </goals>-->
+    <!--                        <configuration>-->
+    <!--                            <archive>-->
+    <!--                                <manifest>-->
+    <!--                                    <mainClass>Main</mainClass>-->
+    <!--                                </manifest>-->
+    <!--                            </archive>-->
+    <!--                            <descriptorRefs>-->
+    <!--                                <descriptorRef>jar-with-dependencies</descriptorRef>-->
+    <!--                            </descriptorRefs>-->
+    <!--                        </configuration>-->
+    <!--                    </execution>-->
+    <!--                </executions>-->
+    <!--            </plugin>-->
+    <!--            <plugin>-->
+    <!--                <groupId>org.apache.maven.plugins</groupId>-->
+    <!--                <artifactId>maven-compiler-plugin</artifactId>-->
+    <!--                <configuration>-->
+    <!--                    <source>17</source>-->
+    <!--                    <target>17</target>-->
+    <!--                </configuration>-->
+    <!--            </plugin>-->
+    <!--            <plugin>-->
+    <!--                <groupId>org.apache.maven.plugins</groupId>-->
+    <!--                <artifactId>maven-compiler-plugin</artifactId>-->
+    <!--                <configuration>-->
+    <!--                    <source>17</source>-->
+    <!--                    <target>17</target>-->
+    <!--                </configuration>-->
+    <!--            </plugin>-->
+    <!--            <plugin>-->
+    <!--                <groupId>org.apache.maven.plugins</groupId>-->
+    <!--                <artifactId>maven-compiler-plugin</artifactId>-->
+    <!--                <configuration>-->
+    <!--                    <source>16</source>-->
+    <!--                    <target>16</target>-->
+    <!--                </configuration>-->
+    <!--            </plugin>-->
+    <!--        </plugins>-->
+    <!--        &lt;!&ndash;        <plugins>&ndash;&gt;-->
+    <!--        &lt;!&ndash;            <plugin>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                <groupId>org.springframework.boot</groupId>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                <artifactId>spring-boot-maven-plugin</artifactId>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                <configuration>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                    <excludes>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                        <exclude>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                            <groupId>org.projectlombok</groupId>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                            <artifactId>lombok</artifactId>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                        </exclude>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                    </excludes>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                </configuration>&ndash;&gt;-->
+    <!--        &lt;!&ndash;            </plugin>&ndash;&gt;-->
+    <!--        &lt;!&ndash;            <plugin>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                <groupId>org.apache.maven.plugins</groupId>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                <artifactId>maven-compiler-plugin</artifactId>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                <configuration>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                    <source>17</source>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                    <target>17</target>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                </configuration>&ndash;&gt;-->
+    <!--        &lt;!&ndash;            </plugin>&ndash;&gt;-->
+    <!--        &lt;!&ndash;        </plugins>&ndash;&gt;-->
+    <!--    </build>-->
 
 </project>
