--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,13 +20,13 @@ spring.jackson.serialization.fail-on-empty-beans=false
 spring.data.rest.detection-strategy=annotated
 spring.data.rest.max-page-size=100
 spring.data.rest.default-page-size=10
-logging.file.name=spring_app_log_file.log
-logging.pattern.file="%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
-logging.level.root=warn
-logging.level.org.springframework.web=debug
-logging.level.org.hibernate=error
-spring.mvc.pathmatch.matching-strategy="ANT_PATH_MATCHER"
-springdoc.api-docs.path=/api-docs
+#logging.file.name=spring_app_log_file.log
+#logging.pattern.file="%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+#logging.level.root=warn
+#logging.level.org.springframework.web=debug
+#logging.level.org.hibernate=error
+#spring.mvc.pathmatch.matching-strategy="ANT_PATH_MATCHER"
+#springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.swagger-ui.operationsSorter=method
 
